Fixed wrapped table view.

--- a/sass/components/_table.scss
+++ b/sass/components/_table.scss
@@ -203,12 +203,6 @@ td {
 	}
 }
 
-/*
- section: 6.1.4
- title: Table pinned
- template: 6_1_4_table-pinned
- description:
-*/
 .is-table-pinned {
 	float: left;
 	overflow-x: auto;
@@ -224,12 +218,6 @@ td {
 	}
 }
 
-/*
- section: 6.1.5
- title: Table scrollable
- template: 6_1_5_table-scrollable
- description:
-*/
 .is-table-scrollable {
 	border-right: 2px dotted $lightsilver;
 	margin-left: 35%;
